--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "timeZone": "Asia/Jakarta",
-  "language": "en",
+  "timeZone": "Africa/Tripoli",
+  "language": "Fr",
   "ownerNumber": ["6285163651710", "558188263143", "6281311850715"],
   "readStatus": false,
   "readMessage": false,
